sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:3: error: illegal start of simple pattern
  var return=true
      ^AlgBubbleSort3:5: error: '=' expected but ';' found.
  var b=getNombreValeurs()-2 
^AlgBubbleSort3:17: error: 'while' expected but '}' found.
    } }
      ^